--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,7 +12,7 @@
         android:text="@string/hello_blank_fragment" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/postRecyclerView"
+        android:id="@+id/postsRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
