--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">>
+
+    <item
+        android:id = "@+id/search"
+        android:icon = "@drawable/search_icon_actionbar"
+        app:showAsAction="always"
+        android:title="Search"
+        />
 
 </menu>
