--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,6 +7,6 @@
         android:icon = "@drawable/search_icon_actionbar"
         app:showAsAction="always"
         android:title="Search"
-        />
+        app:actionViewClass="android.widget.SearchView" />
 
 </menu>
