--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">>
 
     <item
-        android:id = "@+id/search"
+        android:id = "@+id/action_search"
         android:icon = "@drawable/search_icon_actionbar"
         app:showAsAction="always"
         android:title="Search"
